--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -411,7 +411,7 @@ corrente o di tensione.
 \section{Appendice A: Misurazione delle reristenze $R1$}\label{app: A}
 
 All’interno delle misurazioni delle resistenze, sono stati adottati dei resistori
-contrassegnati da valori nominali che spaziano da 0.22 a 220 $k\Omega$.
+contrassegnati da valori nominali che spaziano da 0.22 $\Omega$ a 220 $k\Omega$.
 Dunque il multimetro digitale non possiede una sensibilità sufficiente ai fini
 della stima delle resistenze più basse.\\  
 In primo luogo, queste ultime sono state misurate attraverso un metodo basato
